k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo
  namespace: gitops-demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: gitops-demo
  template:
    metadata:
      labels:
        app: gitops-demo
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: app
          image: ghcr.io/Shubham-casio21/gitops-kubernetes-platform:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: {path: /readyz, port: 8080}
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthz, port: 8080}
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: {cpu: "50m", memory: "64Mi"}
            limits: {cpu: "250m", memory: "128Mi"}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {drop: ["ALL"]}
